tests/machine/x/c/exists_builtin.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/exists_builtin.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/exists_builtin.c:38:14: warning: implicit declaration of function ‘exists’; did you mean ‘exit’? [-Wimplicit-function-declaration]
   38 |   int flag = exists(_t2);
      |              ^~~~~~
      |              exit
/usr/bin/ld: /tmp/cc8sQ0rW.o: in function `main':
exists_builtin.c:(.text+0x152): undefined reference to `exists'
collect2: error: ld returned 1 exit status

   1: #include <stdio.h>
